C2 conditonal move optimization might create broken graph

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 10
    • Affects Version/s: 8, 9, 10
    • Component/s: hotspot
    • b31
    • Verified

        Attached test case fails with:

        # Internal Error (/home/rwestrel/aarch64-jdk8u-shenandoah/hotspot/src/share/vm/opto/loopnode.cpp:3579), pid=6922, tid=0x00007f4472cc4700
        # assert(false) failed: Bad graph detected in build_loop_late

        PhaseIdealLoop::conditional_move() creates a CMoveI node, updates the control of its inputs but not of a dependent data node. A following split thru phi leads to a broken graph.

              Assignee:
              Roland Westrelin
              Reporter:
              Roland Westrelin
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: