8187822: C2 conditonal move optimization might create broken graph

Reviewed-by: kvn